--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,13 @@
   .main.container {
     margin-top: 7em;
   }
+  #github {
+    padding: 0;
+  }
+  #github i {
+    margin: 0;
+  }
 </style>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 </head>
 <body>
   <div class="ui fixed inverted menu">
@@ -26,9 +31,9 @@
       <a href="/countries.html" class="item">Compare Countries</a>
       <a href="/api.json" class="item">JSON API</a>
       <a href="https://github.com/CSSEGISandData/COVID-19" class="item" target="_blank">Data Source</a>
-			<div class="right item">
+			<div class="right item" id="github">
         <a href="https://github.com/kranzky/corona" class="item" target="_blank">
-          <i class="large github icon"></i>
+          <i class="big github icon"></i>
         </a>
 			</div>
     </div>
@@ -39,4 +44,7 @@
 		<p>This is a WIP. More soon...</p>
   </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+<script src="https://code.highcharts.com/highcharts.src.js"></script>
 </html>
