--- a/src/index.html
+++ b/src/index.html
@@ -27,14 +27,14 @@
   .ui.menu .item img.logo {
     margin-right: 0.5em;
   }
-  .main.container {
-    margin-top: 7em;
-  }
   #github {
     padding: 0;
   }
   #github i {
     margin: 0;
+  }
+  #filter {
+    padding-top: 4.25rem;
   }
 </style>
 </head>
@@ -46,22 +46,47 @@
         COVID-19 Timeline
       </a>
       <a href="/countries.html" class="item">Compare Countries</a>
-      <a href="/api.json" class="item">JSON API</a>
+      <a href="/badges.html" class="item">Status Badges</a>
+      <a href="/api.html" class="item">JSON API</a>
       <a href="https://github.com/CSSEGISandData/COVID-19" class="item" target="_blank">Data Source</a>
-			<div class="right item" id="github">
+      <div class="right item" id="github">
         <a href="https://github.com/kranzky/corona" class="item" target="_blank">
           <i class="big github icon"></i>
         </a>
-			</div>
+      </div>
     </div>
   </div>
-  <div class="ui main text container">
-    <h1 class="ui header">COVID-19 JSON API</h1>
-		<img src="https://corona.kranzky.com/badge.svg" />
-		<p>This is a WIP. More soon...</p>
+  <div class="ui fixed center aligned container" id="filter">
+    <div class="ui dropdown button" id="region" style="display: none;">
+      <span class="text">All Regions</span>
+      <div class="menu"></div>
+    </div>
+    <div class="ui dropdown button" id="subregion" style="display: none;">
+      <span class="text">All Subregions</span>
+      <div class="menu"></div>
+    </div>
+    <div class="ui dropdown button" id="country" style="display: none;">
+      <span class="text">All Countries</span>
+      <div class="menu"></div>
+    </div>
+    <div class="ui dropdown button" id="state" style="display: none;">
+      <span class="text">All States/Provinces</span>
+      <div class="menu"></div>
+    </div>
+  </div>
+  <div class="ui main container">
+    <h1>COVID-19 Timeline</h1>
   </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
 <script src="https://code.highcharts.com/highcharts.src.js"></script>
+<script src="https://corona.kranzky.com/api.js"></script>
+<script>
+  $(document).ready(function() {
+    loadPage();
+  });
+</script>
 </html>
