--- a/src/index.html
+++ b/src/index.html
@@ -83,10 +83,14 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
 <script src="https://code.highcharts.com/highcharts.src.js"></script>
-<script src="https://corona.kranzky.com/api.js"></script>
+<script src="/api.js"></script>
 <script>
   $(document).ready(function() {
     loadPage();
   });
+
+  function refreshDisplay(data) {
+    console.log('whatever');
+  }
 </script>
 </html>
