--- a/src/api.html
+++ b/src/api.html
@@ -35,6 +35,7 @@
   }
   #filter {
     padding-top: 4.25rem;
+    height: 36px;
   }
 </style>
 </head>
@@ -56,7 +57,7 @@
       </div>
     </div>
   </div>
-  <div class="ui fixed center aligned container" id="filter">
+  <div class="ui fixed right aligned container" id="filter">
     <div class="ui dropdown button" id="region" style="display: none;">
       <span class="text">All Regions</span>
       <div class="menu"></div>
