--- a/src/badges.html
+++ b/src/badges.html
@@ -35,6 +35,7 @@
   }
   #filter {
     padding-top: 4.25rem;
+    height: 36px;
   }
   #badge {
     height: 41px;
@@ -59,7 +60,7 @@
       </div>
     </div>
   </div>
-  <div class="ui fixed center aligned container" id="filter">
+  <div class="ui fixed right aligned container" id="filter">
     <div class="ui dropdown button" id="region" style="display: none;">
       <span class="text">All Regions</span>
       <div class="menu"></div>
