add loading dimmer

--- a/src/badges.html
+++ b/src/badges.html
@@ -84,6 +84,9 @@
       <img src="" id="badge">
     </div>
     <pre></pre>
+    <div class="ui inverted dimmer">
+      <div class="ui large text loader">Loading...</div>
+    </div>
   </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
@@ -101,7 +104,6 @@
     $('#badge').attr('src', data.badge);
     markdown = `[![${data.name}](${data.badge})](https://corona.kranzky.com/)`;
     $('pre').text(markdown);
-    console.log(data);
   }
 </script>
 </html>
