--- a/src/countries.html
+++ b/src/countries.html
@@ -77,6 +77,9 @@
   </div>
   <div class="ui main container">
     <h1>Compare Countries</h1>
+    <div class="ui inverted dimmer">
+      <div class="ui large text loader">Loading...</div>
+    </div>
   </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
