add datatable with CSV export

--- a/src/error.html
+++ b/src/error.html
@@ -48,6 +48,7 @@
       </a>
       <a href="/countries.html" class="item">Compare Countries</a>
       <a href="/badges.html" class="item">Status Badges</a>
+      <a href="/csv.html" class="item">CSV Download</a>
       <a href="/api.html" class="item">JSON API</a>
       <a href="https://github.com/CSSEGISandData/COVID-19" class="item" target="_blank">Data Source</a>
       <div class="right item" id="github">
@@ -94,6 +95,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
-<script src="https://code.highcharts.com/highcharts.src.js"></script>
 <script src="/api.js"></script>
 </html>
