--- a/src/csv.html
+++ b/src/csv.html
@@ -23,6 +23,8 @@
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.6.1/css/buttons.dataTables.min.css">
 <style type="text/css">
   .ui.menu .item img.logo {
     margin-right: 0.5em;
@@ -36,6 +38,9 @@
   #filter {
     padding-top: 4.25rem;
     height: 36px;
+  }
+  #csv {
+    width: 100%;
   }
 </style>
 </head>
@@ -77,30 +82,48 @@
     </div>
   </div>
   <div class="ui main container">
-    <h1>JSON API</h1>
-    <a class="ui big basic blue label" id="link" target="_blank">
-      <i class="external icon"></i><span>...</span>
-    </a>
-    <pre></pre>
-    <div class="ui inverted dimmer">
-      <div class="ui large text loader">Loading...</div>
-    </div>
+    <h1>CSV Download</h1>
+    <table id="csv" class="display">
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>Confirmed</th>
+          <th>Deaths</th>
+          <th>Recovered</th>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+    </table>
   </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/buttons/1.6.1/js/dataTables.buttons.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+<script src="https://cdn.datatables.net/buttons/1.6.1/js/buttons.html5.min.js"></script>
 <script src="/api.js"></script>
 <script>
   $(document).ready(function() {
+    table = $('#csv').DataTable({
+      pageLength: 25,
+      dom: 'Bfrtip',
+      buttons: ['csvHtml5', 'pdfHtml5']
+    });
     loadPage();
   });
 
   function refreshDisplay(uri, data, raw) {
-    $('#link span').text(uri);
-    $('#link').attr('href', uri);
-    $('pre').text(raw);
+    table.clear();
+    _.each(data.series, function(value, key) {
+      table.row.add([key, value.confirmed.total, value.deaths.total, value.recovered.total]);
+    });
+    table.draw();
   }
 </script>
 </html>
