--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,7 @@
       </a>
       <a href="/countries.html" class="item">Compare Countries</a>
       <a href="/badges.html" class="item">Status Badges</a>
+      <a href="/csv.html" class="item">CSV Download</a>
       <a href="/api.html" class="item">JSON API</a>
       <a href="https://github.com/CSSEGISandData/COVID-19" class="item" target="_blank">Data Source</a>
       <div class="right item" id="github">
@@ -137,6 +138,7 @@
       },
       plotOptions: {
         series: {
+          animation: false,
           marker: {
             enabled: false
           }
