change default sort order

--- a/src/csv.html
+++ b/src/csv.html
@@ -113,7 +113,8 @@
     table = $('#csv').DataTable({
       pageLength: 25,
       dom: 'Bfrtip',
-      buttons: ['csvHtml5', 'pdfHtml5']
+      buttons: ['csvHtml5', 'pdfHtml5'],
+      order: [[1, 'desc']]
     });
     loadPage();
   });
