--- a/src/countries.html
+++ b/src/countries.html
@@ -36,6 +36,7 @@
   #filter {
     padding-top: 4.25rem;
     height: 36px;
+    padding-left: 400px;
   }
 </style>
 </head>
@@ -58,22 +59,36 @@
       </div>
     </div>
   </div>
-  <div class="ui fixed right aligned container" id="filter">
-    <div class="ui dropdown button" id="region" style="display: none;">
-      <span class="text">All Regions</span>
-      <div class="menu"></div>
-    </div>
-    <div class="ui dropdown button" id="subregion" style="display: none;">
-      <span class="text">All Subregions</span>
-      <div class="menu"></div>
-    </div>
-    <div class="ui dropdown button" id="country" style="display: none;">
-      <span class="text">All Countries</span>
-      <div class="menu"></div>
-    </div>
-    <div class="ui dropdown button" id="state" style="display: none;">
-      <span class="text">All States/Provinces</span>
-      <div class="menu"></div>
+  <div class="ui fixed container" id="filter">
+    <div class="ui fluid multiple search selection dropdown" id="countries">
+      <input type="hidden" name="country">
+      <span class="text">Select Multiple Countries</span>
+      <i class="search icon"></i>
+      <div class="menu">
+        <div class="item" data-value="af"><i class="af flag"></i>Afghanistan</div>
+        <div class="item" data-value="ax"><i class="ax flag"></i>Aland Islands</div>
+        <div class="item" data-value="al"><i class="al flag"></i>Albania</div>
+        <div class="item" data-value="dz"><i class="dz flag"></i>Algeria</div>
+        <div class="item" data-value="as"><i class="as flag"></i>American Samoa</div>
+        <div class="item" data-value="ad"><i class="ad flag"></i>Andorra</div>
+        <div class="item" data-value="ao"><i class="ao flag"></i>Angola</div>
+        <div class="item" data-value="ai"><i class="ai flag"></i>Anguilla</div>
+        <div class="item" data-value="ag"><i class="ag flag"></i>Antigua</div>
+        <div class="item" data-value="ar"><i class="ar flag"></i>Argentina</div>
+        <div class="item" data-value="am"><i class="am flag"></i>Armenia</div>
+        <div class="item" data-value="aw"><i class="aw flag"></i>Aruba</div>
+        <div class="item" data-value="au"><i class="au flag"></i>Australia</div>
+        <div class="item" data-value="uz"><i class="uz flag"></i>Uzbekistan</div>
+        <div class="item" data-value="vu"><i class="vu flag"></i>Vanuatu</div>
+        <div class="item" data-value="va"><i class="va flag"></i>Vatican City</div>
+        <div class="item" data-value="ve"><i class="ve flag"></i>Venezuela</div>
+        <div class="item" data-value="vn"><i class="vn flag"></i>Vietnam</div>
+        <div class="item" data-value="wf"><i class="wf flag"></i>Wallis and Futuna</div>
+        <div class="item" data-value="eh"><i class="eh flag"></i>Western Sahara</div>
+        <div class="item" data-value="ye"><i class="ye flag"></i>Yemen</div>
+        <div class="item" data-value="zm"><i class="zm flag"></i>Zambia</div>
+        <div class="item" data-value="zw"><i class="zw flag"></i>Zimbabwe</div>
+      </div>
     </div>
   </div>
   <div class="ui main container">
@@ -87,4 +102,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
+<script>
+  $(document).ready(function() {
+    $('#countries').dropdown();
+  });
+</script>
 </html>
