--- a/src/csv.html
+++ b/src/csv.html
@@ -66,18 +66,22 @@
   <div class="ui fixed right aligned container" id="filter">
     <div class="ui dropdown button" id="region" style="display: none;">
       <span class="text">All Regions</span>
+      <i class="dropdown icon"></i>
       <div class="menu"></div>
     </div>
     <div class="ui dropdown button" id="subregion" style="display: none;">
       <span class="text">All Subregions</span>
+      <i class="dropdown icon"></i>
       <div class="menu"></div>
     </div>
     <div class="ui dropdown button" id="country" style="display: none;">
       <span class="text">All Countries</span>
+      <i class="dropdown icon"></i>
       <div class="menu"></div>
     </div>
     <div class="ui dropdown button" id="state" style="display: none;">
       <span class="text">All States/Provinces</span>
+      <i class="dropdown icon"></i>
       <div class="menu"></div>
     </div>
   </div>
@@ -95,6 +99,9 @@
       <tbody>
       </tbody>
     </table>
+    <div class="ui inverted dimmer">
+      <div class="ui large text loader">Loading...</div>
+    </div>
   </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
