--- a/src/error.html
+++ b/src/error.html
@@ -61,18 +61,22 @@
   <div class="ui fixed right aligned container" id="filter">
     <div class="ui dropdown button" id="region" style="display: none;">
       <span class="text">All Regions</span>
+      <i class="dropdown icon"></i>
       <div class="menu"></div>
     </div>
     <div class="ui dropdown button" id="subregion" style="display: none;">
       <span class="text">All Subregions</span>
+      <i class="dropdown icon"></i>
       <div class="menu"></div>
     </div>
     <div class="ui dropdown button" id="country" style="display: none;">
       <span class="text">All Countries</span>
+      <i class="dropdown icon"></i>
       <div class="menu"></div>
     </div>
     <div class="ui dropdown button" id="state" style="display: none;">
       <span class="text">All States/Provinces</span>
+      <i class="dropdown icon"></i>
       <div class="menu"></div>
     </div>
   </div>
