--- a/src/badges.html
+++ b/src/badges.html
@@ -47,11 +47,11 @@
     <div class="ui container">
       <a href="/" class="header item">
         <img class="logo" src="virus.png">
-        COVID-19 Timeline
+        COVID-19 Charts
       </a>
       <a href="/countries.html" class="item">Compare Countries</a>
-      <a href="/badges.html" class="item">Status Badges</a>
-      <a href="/csv.html" class="item">CSV Download</a>
+      <a href="/badges.html" class="item">SVG Badges</a>
+      <a href="/csv.html" class="item">CSV Export</a>
       <a href="/api.html" class="item">JSON API</a>
       <a href="https://github.com/CSSEGISandData/COVID-19" class="item" target="_blank">Data Source</a>
       <div class="right item" id="github">
@@ -84,7 +84,7 @@
     </div>
   </div>
   <div class="ui main container">
-    <h1>Status Badges</h1>
+    <h1>SVG Badges</h1>
     <div class="ui big image">
       <img src="" id="badge">
     </div>
