--- a/src/csv.html
+++ b/src/csv.html
@@ -93,7 +93,6 @@
           <th>Date</th>
           <th>Confirmed</th>
           <th>Deaths</th>
-          <th>Recovered</th>
         </tr>
       </thead>
       <tbody>
@@ -129,7 +128,7 @@
   function refreshDisplay(uri, data, raw) {
     table.clear();
     _.each(data.series, function(value, key) {
-      table.row.add([key, value.confirmed.delta, value.deaths.delta, value.recovered.delta]);
+      table.row.add([key, value.confirmed.delta, value.deaths.delta]);
     });
     table.draw();
   }
