--- a/src/index.html
+++ b/src/index.html
@@ -109,10 +109,12 @@
   function refreshDisplay(uri, data, raw) {
     confirmed = [];
     deaths = [];
+    recovered = [];
     _.each(data.series, function(value, key) {
       timestamp = Date.parse(key);
       confirmed.push([timestamp, value.confirmed.total]);
       deaths.push([timestamp, value.deaths.total]);
+      recovered.push([timestamp, value.recovered.total]);
     });
     chart = {
       chart: {
@@ -166,6 +168,10 @@
         {
           name: 'Deaths',
           data: deaths
+        },
+        {
+          name: 'Recovered',
+          data: recovered
         }
       ]
     };
