display cities if available

--- a/src/api.html
+++ b/src/api.html
@@ -79,6 +79,11 @@
       <i class="dropdown icon"></i>
       <div class="menu"></div>
     </div>
+    <div class="ui dropdown button" id="city" style="display: none;">
+      <span class="text">All Cities</span>
+      <i class="dropdown icon"></i>
+      <div class="menu"></div>
+    </div>
   </div>
   <div class="ui main container">
     <h1>JSON API</h1>
