--- a/src/badges.html
+++ b/src/badges.html
@@ -82,6 +82,11 @@
       <i class="dropdown icon"></i>
       <div class="menu"></div>
     </div>
+    <div class="ui dropdown button" id="city" style="display: none;">
+      <span class="text">All Cities</span>
+      <i class="dropdown icon"></i>
+      <div class="menu"></div>
+    </div>
   </div>
   <div class="ui main container">
     <h1>SVG Badges</h1>
