--- a/src/csv.html
+++ b/src/csv.html
@@ -84,6 +84,11 @@
       <i class="dropdown icon"></i>
       <div class="menu"></div>
     </div>
+    <div class="ui dropdown button" id="city" style="display: none;">
+      <span class="text">All Cities</span>
+      <i class="dropdown icon"></i>
+      <div class="menu"></div>
+    </div>
   </div>
   <div class="ui main container">
     <h1>CSV Export</h1>
