handle badge generation failure

--- a/src/csv.html
+++ b/src/csv.html
@@ -85,7 +85,7 @@
       <div class="menu"></div>
     </div>
     <div class="ui dropdown button" id="city" style="display: none;">
-      <span class="text">All Cities</span>
+      <span class="text">All Cities/Counties</span>
       <i class="dropdown icon"></i>
       <div class="menu"></div>
     </div>
