fix state management

--- a/src/index.html
+++ b/src/index.html
@@ -46,14 +46,14 @@
 <body>
   <div class="ui fixed inverted menu">
     <div class="ui container">
-      <a href="/" class="header item">
+      <a href="/" class="header item" id="home_link">
         <img class="logo" src="virus.png">
         COVID-19 Charts
       </a>
-      <a href="/countries.html" class="item">Compare Countries</a>
-      <a href="/badges.html" class="item">SVG Badges</a>
-      <a href="/csv.html" class="item">CSV Export</a>
-      <a href="/api.html" class="item">JSON API</a>
+      <a href="/countries.html" class="item" id="compare_link">Compare Countries</a>
+      <a href="/badges.html" class="item" id="badge_link">SVG Badges</a>
+      <a href="/csv.html" class="item" id="export_link">CSV Export</a>
+      <a href="/api.html" class="item" id="api_link">JSON API</a>
       <a href="https://github.com/CSSEGISandData/COVID-19" class="item" target="_blank">Data Source</a>
       <div class="right item" id="github">
         <a href="https://github.com/kranzky/corona" class="item" target="_blank">
