--- a/src/countries.html
+++ b/src/countries.html
@@ -43,14 +43,14 @@
 <body>
   <div class="ui fixed inverted menu">
     <div class="ui container">
-      <a href="/" class="header item">
+      <a href="/" class="header item" id="home_link">
         <img class="logo" src="virus.png">
         COVID-19 Charts
       </a>
-      <a href="/countries.html" class="item">Compare Countries</a>
-      <a href="/badges.html" class="item">SVG Badges</a>
-      <a href="/csv.html" class="item">CSV Export</a>
-      <a href="/api.html" class="item">JSON API</a>
+      <a href="/countries.html" class="item" id="compare_link">Compare Countries</a>
+      <a href="/badges.html" class="item" id="badge_link">SVG Badges</a>
+      <a href="/csv.html" class="item" id="export_link">CSV Export</a>
+      <a href="/api.html" class="item" id="api_link">JSON API</a>
       <a href="https://github.com/CSSEGISandData/COVID-19" class="item" target="_blank">Data Source</a>
       <div class="right item" id="github">
         <a href="https://github.com/kranzky/corona" class="item" target="_blank">
@@ -102,9 +102,12 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
+<script src="/api.js"></script>
 <script>
   $(document).ready(function() {
     $('#countries').dropdown();
+    loadState();
+    saveState();
   });
 </script>
 </html>
