--- a/src/countries.html
+++ b/src/countries.html
@@ -105,9 +105,7 @@
 <script src="/api.js"></script>
 <script>
   $(document).ready(function() {
-    $('#countries').dropdown();
-    loadState();
-    saveState();
+    loadPage("countries");
   });
 </script>
 </html>
